rook/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: rook-ceph.example.net
    http:
      paths:
        - path: /
          backend:
            serviceName: rook-ceph-mgr-dashboard
            servicePort: dashboard
